# libeasy

./: .gitignore  Android.mk  Application.mk  CMakeLists.txt  CMakeSettings.json
cmake/: find_third_party.cmake  install_overrides.cmake
doc/: ndk编译openssl.txt  third_party.txt  vs编译openssl.txt
doxygen/: Doxyfile
src/: config.h  config.h.in
src/ebase/: allocator.cpp  allocator.hpp  argus_packet.hpp  atomic.cpp  atomic.hpp  buffer.cpp  buffer.hpp  byte_order.hpp  compile.h  error.cpp  error.hpp  event_emitter.cpp  event_emitter.hpp  executor.cpp  executor.hpp  fiber_platform.hpp  log.cpp  log.hpp  platform.hpp  precompile.h  precompile_msvc.h  ref_array.cpp  ref_array.hpp  ref_class.cpp  ref_class.hpp  ref_function.cpp  ref_function.hpp  ref_function_maker.h  ref_list.cpp  ref_list.hpp  ref_memory.cpp  ref_memory.hpp  ref_string.cpp  ref_string.hpp  ref_tree.cpp  ref_tree.hpp  runnable.cpp  runnable.hpp  stream.cpp  stream.hpp  (+18 more)
src/ebase/algorithm/: binomial_heap.cpp  binomial_heap.hpp  fibheap.c  fibheap.h  heap.h  iheap.h
src/ebase/c/: rbtree.c  rbtree.h
src/ebase/macro/: dblist.h  xlist.h
src/ebase/platform/: atomic_linux.cpp  atomic_win32.cpp  fiber_linux.cpp  fiber_win32.cpp  platform_linux.cpp  platform_win32.cpp  thread_linux.cpp  thread_win32.cpp
src/ebase/unittest/: atomic_unittest.cpp  buffer_unittest.cpp  fiber_unittest.cpp  rbtree_unittest.cpp  ref_function_unittest.cpp  ref_tree_unittest.cpp  thread_unittest.cpp  time_unittest.cpp  timer_unittest.cpp
src/ebase/variant/: variant_array.hpp  variant_map.hpp  variant_string.hpp  variant_value.hpp
src/ebuffer/: ebuffer.cpp  ebuffer.hpp  fixed_value.hpp
src/ebuffer/unittest/: ebuffer_unittest.cpp
src/ehttp/: cookie.cpp  cookie.hpp  http_client.cpp  http_client.hpp  http_connection.cpp  http_connection.hpp  http_parser_wrap.cpp  http_parser_wrap.hpp  http_protocol.cpp  http_protocol.hpp  http_request.cpp  http_request.hpp  http_response.cpp  http_response.hpp  http_server.cpp  http_server.hpp  http_socket.cpp  http_socket.hpp  http_url.cpp  http_url.hpp  http_virtual_server.cpp  http_virtual_server.hpp
src/ehttp/c/: http_parser.h
src/ehttp/unittest/: http_connection_unittest.cpp  http_protocol_unittest.cpp  http_request_unittest.cpp  http_socket_unittest.cpp
src/eio/: eio.cpp  eio.hpp  file.cpp  file.hpp  file_system.cpp  file_system.hpp  io_method.cpp  io_method.hpp  name_resolver.cpp  name_resolver.hpp  socket_address.cpp  socket_address.hpp  socket_io.cpp  socket_io.hpp  socket_native.cpp  socket_native.hpp  stream_socket.cpp_  stream_socket.hpp
src/eio/base/: io_callback.cpp  io_callback.hpp  io_request.cpp  io_request.hpp
src/eio/epoll/: epoll_linux.cpp  epoll_linux.hpp  socket_linux.cpp  socket_linux.hpp
src/eio/iocp/: file_win32.cpp  file_win32.hpp  iocp_win32.cpp  iocp_win32.hpp  socket_win32.cpp  socket_win32.hpp  socket_win32_accept.cpp  socket_win32_connect.cpp  socket_win32_read.cpp  socket_win32_write.cpp
src/eio/platform/: file_platform.hpp  file_platform_linux.cpp  file_platform_win32.cpp
src/eio/posix/: poll_posix.cpp  poll_posix.hpp  select_posix.cpp  select_posix.hpp  socket_posix.cpp  socket_posix.hpp  socket_rw_manager_posix.cpp  socket_rw_manager_posix.hpp
src/eio/ssl/: openssl_context.cpp  openssl_context.hpp  ssl_context.hpp  ssl_socket.cpp  ssl_socket.hpp
src/eio/unittest/: file_system_unittest.cpp  file_unittest.cpp  name_resolver_unittest.cpp  socket_address_unittest.cpp  socket_native_unittest.cpp
src/estream/: zlib_stream.cpp  zlib_stream.hpp
src/estream/unittest/: zlib_stream_unitttest.cpp
src/examples/: connect_multi.cpp  connect_multi.hpp  echo_server.cpp  echo_server.hpp  echo_server_main.cpp  test_openssl.cpp
